var small changes

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@ ol{margin:1em 0 0 0;padding:0}
 </div>
 
 <h3>Buy paper version</h3>
-<a href="https://www.amazon.com/Calculus-Made-Easy-Silvanus-Thompson/dp/0312185480//ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0d-20&linkId=2d5a06e26b473450cb70d651689799c2"><img class="cover" src="cover.jpg"></a>
-<p> <a href="https://www.amazon.com/Calculus-Made-Easy-Silvanus-Thompson/dp/0312185480//ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0d-20&linkId=2d5a06e26b473450cb70d651689799c2">On Amazon.com</a>*
-<p> <a href="http://www.shareasale.com/r.cfm?u=740877&b=385748&m=40674&afftrack=&urllink=www%2Ebiblio%2Ecom%2Fsearch%2Ephp%3Fauthor%3D%26title%3Dcalculus%2Bmade%2Beasy%26keyisbn%3D%26format%3D">Second hand from Biblio.com</a>*
+<a href="https://www.amazon.com/gp/product/0312185480/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0312185480&linkCode=as2&tag=calculusma00d-20&linkId=349b72d6c16a7a454af34fe78ba419c4"><img class="cover" src="cover.jpg"></a>
+<p> <a href="https://www.amazon.com/gp/product/0312185480/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0312185480&linkCode=as2&tag=calculusma00d-20&linkId=349b72d6c16a7a454af34fe78ba419c4">On Amazon.com</a>*
+<p> <a href="http://www.shareasale.com/r.cfm?u=740877&b=385748&m=40674&afftrack=&urllink=www%2Ebiblio%2Ecom%2Fsearch%2Ephp%3Ftitle%3Dcalculus%2Bmade%2Beasy">Second hand from Biblio.com</a>*
 
 <h3>What next?</h3>
 <ul>
-<a href="https://www.amazon.com/Calculus-Second-Gilbert-Strang/dp/0980232740/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0d-20&linkId=ed2c6b38a4d31c5bba7f026c1b07b3d9"><img class="cover" src="strang.jpg" width="186"/>
+<a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467"><img class="cover" src="strang.jpg" width="186"/>
 	</a>
-	<li>I had enjoyed <a href="https://www.amazon.com/Calculus-Second-Gilbert-Strang/dp/0980232740/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0d-20&linkId=ed2c6b38a4d31c5bba7f026c1b07b3d9">Calculus, Second edition</a>* by Gilbert Strang. It has similar approach as Calculus Made Easy but goes deeper.
+	<li>I had enjoyed <a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467">Calculus, Second edition</a>* by Gilbert Strang. It has similar approach as Calculus Made Easy but goes deeper.
 <!-- <li><a href="http://www.wolframalpha.com/input/?i=integrate+log%281%2Bx%5E2%29">Delegate work to machines</a> -->
 </ul>
 <p><small><small>* Affiliate link</small></small>
