--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ ol{margin:1em 0 0 0;padding:0}
 <ul>
 <a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467"><img class="cover" src="strang.jpg" width="186"/>
 	</a>
-	<li>I had enjoyed <a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467">Calculus, Second edition</a>* by Gilbert Strang. It has similar approach as Calculus Made Easy but goes deeper.
+	<li>I have enjoyed <a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467">Calculus, Second edition</a>* (on <a href="http://www.shareasale.com/r.cfm?u=740877&b=385748&m=40674&afftrack=&urllink=www.biblio.com%2Fsearch.php%3Fauthor%3Dstrang%26title%3Dcalculus%2Bsecond%2Bedition%26keyisbn%3D">biblio</a>*) by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
 <!-- <li><a href="http://www.wolframalpha.com/input/?i=integrate+log%281%2Bx%5E2%29">Delegate work to machines</a> -->
 </ul>
 <p><small><small>* Affiliate link</small></small>
@@ -99,12 +99,12 @@ ol{margin:1em 0 0 0;padding:0}
 <br>
 <br>
 <h3>About this edition &amp; thanks</h3>
-Text is based on <a href="http://www.gutenberg.org/ebooks/33283">PDF version</a> from Project Gutenberg converted to html by hand.<p>Thanks to Paula Appling, Don Bindner, Chris Curnow, Andrew D. Hwang
+The text is based on <a href="http://www.gutenberg.org/ebooks/33283">the PDF version</a> from Project Gutenberg converted to html by hand.<p>Thanks to Paula Appling, Don Bindner, Chris Curnow, Andrew D. Hwang
 and
-Project Gutenberg Online Distributed Proofreading Team for preparing original PDF.
-<p>Theme is borrowed from <a href="http://diveintohtml5.info/">Dive Into HTML5</a> by <a href="http://diveintohtml5.info/about.html">Mark Pilgrim</a> released under license <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY-3.0</a>.
-	<p><a href="http://diveintohtml5.info/legal.html">Full legal notices</a>
-<p>Corrections are welcome on nadvornik.jiri@gmail.com
+Project Gutenberg Online Distributed Proofreading Team for preparing the original PDF.
+<p>The theme is borrowed from <a href="http://diveintohtml5.info/">Dive Into HTML5</a> by <a href="http://diveintohtml5.info/about.html">Mark Pilgrim</a> released under the <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY-3.0</a> license.
+	  <p><a href="http://diveintohtml5.info/legal.html">Full legal notices</a>. <a href="https://github.com/nadvornix/calculus-made-easy">Github page</a>.
+        <p>Corrections are welcome on nadvornik.jiri@gmail.com
 
 <script src="j/jquery.js"></script>
 <script src="j/dih5.js"></script>
