+ small updates before making public

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ ol{margin:1em 0 0 0;padding:0}
 <blockquote class="note">
 <p>
 	I read "Calculus Made Easy" by Silvanus P. Thompson and it's still to this day my inspiration for explaining complex technical topics to lay people. It's a fantastic book, and even if you know math you <em>must</em> read it if you want to understand how to teach complexity to others. <small><em><a href="http://news.ycombinator.com/item?id=1299805">(source)</a></em></small>
-	<div style="text-align:right">-- <a href="http://zedshaw.com/" style="width:5em">Zed Shaw</a><br>Author of <a href="http://learncodethehardway.org/">Learn Code The Hard Way</a></div>
+	<div style="text-align:right">-- <a href="http://zedshaw.com/" style="width:5em">Zed Shaw</a><br>Author of <a href="http://learncodethehardway.org/">Learn Code the Hard Way</a></div>
 </blockquote>
 
 <blockquote class="note">
@@ -88,10 +88,21 @@ ol{margin:1em 0 0 0;padding:0}
 
 <h3>What next?</h3>
 <ul>
-<a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467"><img class="cover" src="strang.jpg" width="186"/>
+<a href=""><img class="cover" src="strang.jpg" width="186"/>
 	</a>
-	<li>I have enjoyed <a href="https://www.amazon.com/gp/product/0980232740/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0980232740&linkCode=as2&tag=calculusma00d-20&linkId=ac4fe463de1daf89e32fa779badc9467">Calculus, Second edition</a>* (on <a href="http://www.shareasale.com/r.cfm?u=740877&b=385748&m=40674&afftrack=&urllink=www.biblio.com%2Fsearch.php%3Fauthor%3Dstrang%26title%3Dcalculus%2Bsecond%2Bedition%26keyisbn%3D">biblio</a>*) by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
-<!-- <li><a href="http://www.wolframalpha.com/input/?i=integrate+log%281%2Bx%5E2%29">Delegate work to machines</a> -->
+	<li>I have enjoyed <a href="">Calculus, Second edition</a>* (on <a href="">biblio</a>*) by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
+</ul>
+<br clear="all">
+<ul>
+    <a href=""><img class="cover" src="needham.jpg" width="186"/>
+	  </a>
+	  <li><a href="">Visual Complex Analysis</a>* is legendary. Just as Calculus Made Easy it uses geometrical approach instead of usual symbolic one.
+</ul>
+<br clear="all">
+<ul>
+    <a href=""><img class="cover" src="strogatz.jpg" width="186"/>
+	  </a>
+	  <li><a href="">Nonlinear Dynamics and Chaos</a>* is another more advanced textbook that is famous for its great pedagogy. You can also find <a href="https://www.youtube.com/playlist?list=PLbN57C5Zdl6j_qJA-pARJnKsmROzPnO9V">Strogatz's lectures on youtube.</a>
 </ul>
 <p><small><small>* Affiliate link</small></small>
 <br>
@@ -102,9 +113,9 @@ ol{margin:1em 0 0 0;padding:0}
 The text is based on <a href="http://www.gutenberg.org/ebooks/33283">the PDF version</a> from Project Gutenberg converted to html by hand.<p>Thanks to Paula Appling, Don Bindner, Chris Curnow, Andrew D. Hwang
 and
 Project Gutenberg Online Distributed Proofreading Team for preparing the original PDF.
-<p>The theme is borrowed from <a href="http://diveintohtml5.info/">Dive Into HTML5</a> by <a href="http://diveintohtml5.info/about.html">Mark Pilgrim</a> released under the <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY-3.0</a> license.
+<p>The theme is borrowed from <a href="http://diveinto.html5doctor.com/">Dive Into HTML5</a> by <a href="http://diveintohtml5.info/about.html">Mark Pilgrim</a> released under the <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY-3.0</a> license.
 	  <p><a href="http://diveintohtml5.info/legal.html">Full legal notices</a>. <a href="https://github.com/nadvornix/calculus-made-easy">Github page</a>.
-        <p>Corrections are welcome on nadvornik.jiri@gmail.com
+        <p>Please send corrections, suggestions and comments on nadvornik.jiri@gmail.com
 
 <script src="j/jquery.js"></script>
 <script src="j/dih5.js"></script>
