--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@ ol{margin:1em 0 0 0;padding:0}
 	Thompson creates a warm, inviting environment where students will learn and grasp the true essence of calculus without any added fluff or overt technicality. <small><em><a href="http://math-blog.com/mathematics-books/">(source)</a></em></small>
 	<div style="text-align:right">-- <a href="http://math-blog.com/mathematics-books/" style="width:5em">Math-Blog.com</a></div>
 </blockquote>
+
+<blockquote class="note">
+    <p>
+	      Most college calculus texts weigh a ton; this one does not — it just gets to the point. This is how I learned calculus: my uncle gave me a copy. <small><em><a href="http://math.ucr.edu/home//baez/books.html">(source)</a></em></small>
+	      <div style="text-align:right">-- <a href="https://en.wikipedia.org/wiki/John_C._Baez">John Baez</a><br> Mathematical physicist, author of <a href="https://golem.ph.utexas.edu/category/">n-Category Café</a></div>
+</blockquote>
+
 </div>
 
 <h3>Buy paper version</h3>
@@ -90,7 +97,7 @@ ol{margin:1em 0 0 0;padding:0}
 <ul>
 <a href=""><img class="cover" src="strang.jpg" width="186"/>
 	</a>
-	<li>I have enjoyed <a href="">Calculus, Second edition</a>* (on <a href="">biblio</a>*) by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
+	<li>I have enjoyed <a href="">Calculus, Second edition</a>* (on <a href="http://www.shareasale.com/r.cfm?u=740877&b=385748&m=40674&afftrack=&urllink=www%2Ebiblio%2Ecom%2Fsearch%2Ephp%3Ftitle%3Dcalculus%2Bmade%2Beasy">biblio</a>*) by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
 </ul>
 <br clear="all">
 <ul>
