--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ ol{margin:1em 0 0 0;padding:0}
 <li><a href="13.html"> XIII. Other Useful Dodges</a>
 <li><a href="14.html"> XIV. (a) On true Compound Interest and the Law of Organic Growth</a>
 <li><a href="14b.html"> XIV. (b) The Die-away Curve</a>
-<li><a href="15.html"> XV. How To Deal With Slnes And Cosines</a>
+<li><a href="15.html"> XV. How To Deal With Sines And Cosines</a>
 <li><a href="16.html"> XVI. Partial Differentiation</a>
 <li><a href="17.html"> XVII. Integration</a>
 <li><a href="18.html"> XVIII. Integrating as the Reverse of Differentiating</a>
@@ -95,21 +95,21 @@ ol{margin:1em 0 0 0;padding:0}
 
 <h3>What next?</h3>
 <ul>
-<a href=""><img class="cover" src="strang.jpg" width="186"/>
+    <a href="https://www.amazon.com/Calculus-3rd-Gilbert-Strang/dp/0980232759/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=bff7f0d5786f75c16ea3b5ecdb44d32f&language=en_US"><img class="cover" src="strang.jpg" width="186"/>
 	</a>
-	<li>I have enjoyed <a href="">Calculus, Second edition</a>* (on <a href="http://www.shareasale.com/r.cfm?u=740877&b=385748&m=40674&afftrack=&urllink=www%2Ebiblio%2Ecom%2Fsearch%2Ephp%3Ftitle%3Dcalculus%2Bmade%2Beasy">biblio</a>*) by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
+	<li>I have enjoyed <a href="https://www.amazon.com/Calculus-3rd-Gilbert-Strang/dp/0980232759/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=bff7f0d5786f75c16ea3b5ecdb44d32f&language=en_US">Calculus, Second edition</a>* by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
 </ul>
 <br clear="all">
 <ul>
-    <a href=""><img class="cover" src="needham.jpg" width="186"/>
+    <a href="https://www.amazon.com/Visual-Complex-Analysis-Tristan-Needham/dp/0198534469/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=36f5fedef340e5c0c152cf95aa4f00c6&language=en_US"><img class="cover" src="needham.jpg" width="186"/>
 	  </a>
-	  <li><a href="">Visual Complex Analysis</a>* is legendary. Just as Calculus Made Easy it uses geometrical approach instead of usual symbolic one.
+	  <li><a href="https://www.amazon.com/Visual-Complex-Analysis-Tristan-Needham/dp/0198534469/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=36f5fedef340e5c0c152cf95aa4f00c6&language=en_US">Visual Complex Analysis</a>* is legendary. Just as Calculus Made Easy it uses geometrical approach instead of usual symbolic one.
 </ul>
 <br clear="all">
 <ul>
-    <a href=""><img class="cover" src="strogatz.jpg" width="186"/>
+    <a href="https://www.amazon.com/Nonlinear-Dynamics-Chaos-Applications-Nonlinearity/dp/0813349109/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=a8fbc09ac32d738609c9ff150c749a97&language=en_US"><img class="cover" src="strogatz.jpg" width="186"/>
 	  </a>
-	  <li><a href="">Nonlinear Dynamics and Chaos</a>* is another more advanced textbook that is famous for its great pedagogy. You can also find <a href="https://www.youtube.com/playlist?list=PLbN57C5Zdl6j_qJA-pARJnKsmROzPnO9V">Strogatz's lectures on youtube.</a>
+	  <li><a href="https://www.amazon.com/Nonlinear-Dynamics-Chaos-Applications-Nonlinearity/dp/0813349109/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=a8fbc09ac32d738609c9ff150c749a97&language=en_US">Nonlinear Dynamics and Chaos</a>* is another more advanced textbook that is famous for its great pedagogy. You can also find <a href="https://www.youtube.com/playlist?list=PLbN57C5Zdl6j_qJA-pARJnKsmROzPnO9V">Strogatz's lectures on youtube.</a>
 </ul>
 <p><small><small>* Affiliate link</small></small>
 <br>
