fixing double primes. (issue #1)

--- a/3.html
+++ b/3.html
@@ -270,7 +270,7 @@ twice over.
 differentiated is by putting an accent to the symbol of
 the function. Thus if $y=F(x)$, which means that $y$
 is some unspecified function of $x$ (see <a href="3.html#function">here</a>), we may
-write $F'(x)$ instead of $\dfrac{d\bigl(F(x)\bigr)}{dx}$. Similarly, $F”(x)$
+write $F'(x)$ instead of $\dfrac{d\bigl(F(x)\bigr)}{dx}$. Similarly, $F''(x)$
 will mean that the original function $F(x)$ has been
 differentiated twice over with respect to $x$.
 
