--- a/7.html
+++ b/7.html
@@ -46,16 +46,16 @@ This is called the “derived function” of $x$.
 
 <p>Suppose we differentiate over again, we shall get
 the “second derived function” or second differential
-coefficient, which is denoted by $f”(x)$; and so on.
+coefficient, which is denoted by $f''(x)$; and so on.
 
 <p>Now let us generalize.
 
 <p>Let $y = f(x) = x^n$.
 \begin{align*}
    \text{First differentiation,}\;      f'(x) &= nx^{n-1}. \\
-   \text{Second differentiation,}\;    f”(x) &= n(n-1)x^{n-2}. \\
-   \text{Third differentiation,}\;    f”'(x) &= n(n-1)(n-2)x^{n-3}. \\
-   \text{Fourth differentiation,}\;  f””(x) &= n(n-1)(n-2)(n-3)x^{n-4}. \\
+   \text{Second differentiation,}\;    f''(x) &= n(n-1)x^{n-2}. \\
+   \text{Third differentiation,}\;    f'''(x) &= n(n-1)(n-2)x^{n-3}. \\
+   \text{Fourth differentiation,}\;  f''''(x) &= n(n-1)(n-2)(n-3)x^{n-4}. \\
     &\llap{\text{etc.,}} \text{ etc.}
 \end{align*}
 
@@ -64,11 +64,11 @@ differentiations. For,
 \begin{align*}
  \text{if the original function be}\;               y &= f(x);  \\
  \text{once differentiating gives}\;    \frac{dy}{dx} &= f'(x); \\
- \text{twice differentiating gives}\;   \frac{d\left(\dfrac{dy}{dx}\right)}{dx} &= f”(x);
+ \text{twice differentiating gives}\;   \frac{d\left(\dfrac{dy}{dx}\right)}{dx} &= f''(x);
 \end{align*}
 and this is more conveniently written as $\dfrac{d^2y}{(dx)^2}$, or
 more usually $\dfrac{d^2y}{dx^2}$. Similarly, we may write as the
-result of thrice differentiating, $\dfrac{d^3y}{dx^3} = f”'(x)$.
+result of thrice differentiating, $\dfrac{d^3y}{dx^3} = f'''(x)$.
 <hr>
 
 
@@ -77,17 +77,17 @@ result of thrice differentiating, $\dfrac{d^3y}{dx^3} = f”'(x)$.
 Now let us try $y = f(x) = 7x^4 + 3.5x^3 - \frac{1}{2}x^2 + x - 2$.
 \begin{align*}
 \frac{dy}{dx}     &= f'(x) = 28x^3 + 10.5x^2 - x + 1, \\
-\frac{d^2y}{dx^2} &= f”(x) = 84x^2 + 21x - 1,        \\
-\frac{d^3y}{dx^3} &= f”'(x) = 168x + 21,             \\
-\frac{d^4y}{dx^4} &= f””(x) = 168,                  \\
-\frac{d^5y}{dx^5} &= f””'(x) = 0.
+\frac{d^2y}{dx^2} &= f''(x) = 84x^2 + 21x - 1,        \\
+\frac{d^3y}{dx^3} &= f'''(x) = 168x + 21,             \\
+\frac{d^4y}{dx^4} &= f''''(x) = 168,                  \\
+\frac{d^5y}{dx^5} &= f'''''(x) = 0.
 \end{align*}
 In a similar manner if $y = \phi(x) = 3x(x^2 - 4)$,
 \begin{align*}
 \phi'(x)    &= \frac{dy}{dx} = 3\bigl[x × 2x + (x^2 - 4) × 1\bigr] = 3(3x^2 - 4), \\
-\phi”(x)   &= \frac{d^2y}{dx^2} = 3 × 6x = 18x, \\
-\phi”'(x)  &= \frac{d^3y}{dx^3} = 18, \\
-\phi””(x) &= \frac{d^4y}{dx^4} = 0.
+\phi''(x)   &= \frac{d^2y}{dx^2} = 3 × 6x = 18x, \\
+\phi'''(x)  &= \frac{d^3y}{dx^3} = 18, \\
+\phi''''(x) &= \frac{d^4y}{dx^4} = 0.
 \end{align*}
 
 <p>
