fix link in ch6

--- a/3.html
+++ b/3.html
@@ -239,6 +239,7 @@ them is considered as infinitesimally minute.
 
 
 <p>
+<a name="note"/>
 <h2>NOTE TO CHAPTER III.</h2>
 
 <p><h2>How to read Differentials.</h2>
