--- a/6.html
+++ b/6.html
@@ -56,7 +56,7 @@ increase to $u+du$; and $v$ to $v+dv$.
 function separately and add the results. So if now
 we take the example of the preceding paragraph, and
 put in the values of the two functions, we shall have,
-using the notation shown (\Pageref{section:1}),
+using the notation shown (<a href="3.html#note">chapter III</a>),
 \begin{alignat*}{2}
 \frac{dy}{dx}
   & = \frac{d(x^2+c)}{dx} &&+ \frac{d(ax^4+b)}{dx} \\
