Fixing typo in ch6. Thanks to Marco

--- a/6.html
+++ b/6.html
@@ -325,7 +325,7 @@ hence
      &&+ \left.(x + 1)\, \frac{d(x + 1)}{dx}\right] \\
   &  &&+ (x + 1)^2\, \frac{d(2x - 3)}{dx} \\
 
-  &= $2(x + 1)\bigl[(2x - 3) + (x + 1)\bigr] = 2(x + 1)(3x - 2)$; &&
+  &= 2(x + 1)\bigl[(2x - 3) + (x + 1)\bigr] &&= 2(x + 1)(3x - 2)
 \end{alignat*}
 or, more simply, multiply out and then differentiate.
 
