--- a/4.html
+++ b/4.html
@@ -24,7 +24,7 @@ Let us begin with the simple expression $y=x^2$.
 Now remember that the fundamental notion about
 the calculus is the idea of <em>growing</em>. Mathematicians
 call it <em>varying</em>. Now as $y$ and $x^2$ are equal to one
-another, it is clear that if $x$ grows, $x^2$ will also grow.
+another, it is clear that if $y$ grows, $x^2$ will also grow.
 And if $x^2$ grows, then $y$ will also grow. What we
 have got to find out is the proportion between the
 growing of $y$ and the growing of $x$. In other words
