--- a/14.html
+++ b/14.html
@@ -622,7 +622,7 @@ $\log_\epsilon y = x \log_\epsilon a$,
 <p><em>Examples</em>
 (1) $y=\epsilon^{-ax}$. Let $-ax=z$; then $y=\epsilon^z$.
 \[
-\frac{dy}{dx} = \epsilon^z;\quad
+\frac{dy}{dz} = \epsilon^z;\quad
 \frac{dz}{dx} = -a;\quad\text{hence}\quad
 \frac{dy}{dx} = -a\epsilon^{-ax}.
 \]
