--- a/14.html
+++ b/14.html
@@ -83,7 +83,7 @@ factor ten times over) will multiply the original
 capital by $2.59374$. Let us put this into symbols.
 Put $y_0$ for the original capital; $\dfrac{1}{n}$ for the fraction
 added on at each of the $n$ operations; and $y_n$ for the
-value of the capital at the end of the $n^th$ operation.
+value of the capital at the end of the $n$th operation.
 Then
 \[
 y_n = y_0\left(1 + \frac{1}{n}\right)^n.
