correction of fraction from billionth to trillionth

--- a/2.html
+++ b/2.html
@@ -86,7 +86,7 @@ half a minute in a year, it must keep time with an
 accuracy of $1$ part in $1,051,200$. Now if, for such a
 purpose, we regard $\frac{1}{1,000,000}$ (or one millionth) as a
 small quantity, then $\frac{1}{1,000,000}$ of $\frac{1}{1,000,000}$, that is
-$\frac{1}{1,000,000,000,000}$ (or one billionth) will be a small
+$\frac{1}{1,000,000,000,000}$ (or one trillionth) will be a small
 quantity of the second order of smallness, and may
 be utterly disregarded, by comparison.
 
