Cosmetic edit of footnote

--- a/2.html
+++ b/2.html
@@ -78,7 +78,7 @@ of the second order of smallness; and $\frac{1}{1,000,000}$ would
 
 be a small fraction of the third order of smallness,
 being $1$ per cent. of $1$ per cent. of $1$ per cent.
-
+<a id="fn1-top">
 <p>Lastly, suppose that for some very precise purpose
 we should regard $\frac{1}{1,000,000}$ as “small.” Thus, if a
 first-rate chronometer is not to lose or gain more than
@@ -86,7 +86,7 @@ half a minute in a year, it must keep time with an
 accuracy of $1$ part in $1,051,200$. Now if, for such a
 purpose, we regard $\frac{1}{1,000,000}$ (or one millionth) as a
 small quantity, then $\frac{1}{1,000,000}$ of $\frac{1}{1,000,000}$, that is
-$\frac{1}{1,000,000,000,000}$ (or one billionth<sup>†</sup>) will be a small
+$\frac{1}{1,000,000,000,000}$ (or one billionth<sup><a href="#fn1">†</a></sup>) will be a small
 quantity of the second order of smallness, and may
 be utterly disregarded, by comparison.
 
@@ -196,11 +196,13 @@ would be negligible. Even a gross of fleas' fleas
 would not be of much account to the ox.
 <br>
 <hr>
+
+<p><a id="fn1"/><note><sup><a href="#fn1-top">†</a></sup>The term <em>billion</em> here means $10^{12}$ in old British
+English, ie, trillion in <a href="https://en.wikipedia.org/wiki/Long_and_short_scales">modern use</a>.</note>
+<hr>
 <a href="3.html">Next &rarr;</a><br>
 <a href="/">Main Page &uarr;</a><br>
 
-<p><note><sup>†</sup>The term <em>billion</em> often means 10<sup>12</sup> in British
-English.</note>
 
 <script src="j/jquery.js"></script>
 <script src="j/modernizr.js"></script>
