--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@ ol{margin:1em 0 0 0;padding:0}
 <ul>
     <a href="https://www.amazon.com/Calculus-3rd-Gilbert-Strang/dp/0980232759/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=bff7f0d5786f75c16ea3b5ecdb44d32f&language=en_US"><img class="cover" src="strang.jpg" width="186"/>
 	</a>
-	<li>I have enjoyed <a href="https://www.amazon.com/Calculus-3rd-Gilbert-Strang/dp/0980232759/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=bff7f0d5786f75c16ea3b5ecdb44d32f&language=en_US">Calculus, Second edition</a>* by Gilbert Strang. It is similar to Calculus Made Easy, but is more advanced.
+	<li>I have enjoyed <a href="https://www.amazon.com/Calculus-3rd-Gilbert-Strang/dp/0980232759/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=bff7f0d5786f75c16ea3b5ecdb44d32f&language=en_US">Calculus, Second edition</a>* by Gilbert Strang. It is similar to Calculus Made Easy but is more advanced.
 </ul>
 <br clear="all">
 <ul>
     <a href="https://www.amazon.com/Visual-Complex-Analysis-Tristan-Needham/dp/0198534469/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=36f5fedef340e5c0c152cf95aa4f00c6&language=en_US"><img class="cover" src="needham.jpg" width="186"/>
 	  </a>
-	  <li><a href="https://www.amazon.com/Visual-Complex-Analysis-Tristan-Needham/dp/0198534469/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=36f5fedef340e5c0c152cf95aa4f00c6&language=en_US">Visual Complex Analysis</a>* is legendary. Just as Calculus Made Easy it uses geometrical approach instead of usual symbolic one.
+	  <li><a href="https://www.amazon.com/Visual-Complex-Analysis-Tristan-Needham/dp/0198534469/ref=as_li_ss_tl?ie=UTF8&linkCode=ll1&tag=calculusmad0b-20&linkId=36f5fedef340e5c0c152cf95aa4f00c6&language=en_US">Visual Complex Analysis</a>* is legendary. Just as Calculus Made Easy, it uses a geometrical approach instead of the usual symbolic one.
 </ul>
 <br clear="all">
 <ul>
@@ -117,12 +117,12 @@ ol{margin:1em 0 0 0;padding:0}
 <br>
 <br>
 <h3>About this edition &amp; thanks</h3>
-The text is based on <a href="http://www.gutenberg.org/ebooks/33283">the PDF version</a> from Project Gutenberg converted to html by hand.<p>Thanks to Paula Appling, Don Bindner, Chris Curnow, Andrew D. Hwang
+This text is based on <a href="http://www.gutenberg.org/ebooks/33283">the PDF version</a> from Project Gutenberg converted to html by hand.<p>Thanks to Paula Appling, Don Bindner, Chris Curnow, Andrew D. Hwang
 and
 Project Gutenberg Online Distributed Proofreading Team for preparing the original PDF.
 <p>The theme is borrowed from <a href="http://diveinto.html5doctor.com/">Dive Into HTML5</a> by <a href="http://diveintohtml5.info/about.html">Mark Pilgrim</a> released under the <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY-3.0</a> license.
 	  <p><a href="http://diveintohtml5.info/legal.html">Full legal notices</a>. <a href="https://github.com/nadvornix/calculus-made-easy">Github page</a>.
-        <p>Please send corrections, suggestions and comments on nadvornik.jiri@gmail.com
+        <p>Please send corrections, suggestions, and comments to nadvornik.jiri@gmail.com
 
 <script src="j/jquery.js"></script>
 <script src="j/dih5.js"></script>
