Correction proposition line 400
Error in equation display on Chrome
I thought this workaround might do. 
H

--- a/10.html
+++ b/10.html
@@ -398,17 +398,18 @@ equation of the curve.
 
 <p>We have then
 \begin{aligned}
-   y &= x^2 - 5x + 6, \tag{i}  \\
+   y &= x^2 - 5x + 6, \,\,\,\,\,(i)  \\
 \end{aligned}
 \begin{aligned}
-  y &= ax + b,        \tag{ii}    \\
+  y &= ax + b,        \,\,\,\,\,(ii)   \\
 \end{aligned}
 \begin{aligned}
-  -1 &= 2a + b,      \tag{iii}  \\
+  -1 &= 2a + b,      \,\,\,\,\,(iii)  \\
 \end{aligned}
 \begin{aligned}
-  a &= 2x - 5,         \tag{iv}
+  a &= 2x - 5,         \,\,\,\,\,(iv)
 \end{aligned}
+
 
 four equations in $a$, $b$, $x$, $y$.
 
