fix link to mathblog

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ ol{margin:1em 0 0 0;padding:0}
 
 <blockquote class="note">
 <p>
-	Thompson creates a warm, inviting environment where students will learn and grasp the true essence of calculus without any added fluff or overt technicality. <small><em><a href="http://math-blog.com/mathematics-books/">(source)</a></em></small>
-	<div style="text-align:right">-- <a href="http://math-blog.com/mathematics-books/" style="width:5em">Math-Blog.com</a></div>
+	Thompson creates a warm, inviting environment where students will learn and grasp the true essence of calculus without any added fluff or overt technicality. <small><em><a href="http://mathblog.com/mathematics-books/">(source)</a></em></small>
+	<div style="text-align:right">-- <a href="http://mathblog.com/mathematics-books/" style="width:5em">MathBlog</a></div>
 </blockquote>
 
 <blockquote class="note">
