Fix italicized text in formula

--- a/4.html
+++ b/4.html
@@ -134,7 +134,7 @@ y + dy=x^3+3x^2 · dx.
 <p>But $y=x^3$; and, subtracting this, we have:
 \begin{align*}
 dy &= 3x^2 · dx, \\
- and
+\text{ and}\;
 \frac{dy}{dx} &= 3x^2.
 \end{align*}
 
