fix of previous bugfix

--- a/14.html
+++ b/14.html
@@ -757,7 +757,7 @@ Similarly, if $v=\log_\epsilon(x^3-2)$, $\dfrac{dv}{dx} = \dfrac{3x^2}{x^3-2}$ a
 \log y &= -ax \log a^{x} = -ax^{2} \cdot \log a.\\
 \frac{1}{y} \frac{dy}{dx} &= -2ax \cdot \log a\\
 
-- \frac{dy}{dx} &= -2ax\left(\frac{1}{a^{x}}\right)^{ax} \cdot \log a = -2ax \cdot a^{1-ax^{2}} \cdot \log a. 
+\frac{dy}{dx} &= -2ax\left(\frac{1}{a^{x}}\right)^{ax} \cdot \log a = -2x a^{1-ax^{2}} \cdot \log a. 
 
 \end{align*}
 
