fixed error in chapter on diff eqs

--- a/16.html
+++ b/16.html
@@ -130,7 +130,7 @@ kept constant, for
 \]
 
 <p>The variation when both the radius and the height
-change is given by $dV = \dfrac{2\pi}{3} rh\, dV + \dfrac{\pi}{3} r^2\, dh$.
+change is given by $dV = \dfrac{2\pi}{3} rh\, dr + \dfrac{\pi}{3} r^2\, dh$.
 
 <p>
 <a name="example4"/><em> Example (4)</em> <a name="Example4"/> In the following example $F$ and $f$
