Fixed link and edited text in chapter 19

--- a/19.html
+++ b/19.html
@@ -507,8 +507,7 @@ area of the figure operated upon.
 (1) Find the volume of a sphere of radius $r$.
 
 <p>A thin spherical shell has for volume $4\pi x^2\, dx$ (see
-<a href="#figure59">Figure 59</a>; summing up all the concentric shells %[xref, Page]
-which make up the sphere, we have
+<a href="#figure59">Figure 59</a>); summing up all the concentric shells which make up the sphere, we have
 \[
 \text{volume sphere}
   = \int^{x=r}_{x=0} 4\pi x^2\, dx
@@ -624,7 +623,7 @@ curve $y=\sin^2 x$, and find the mean ordinate.
 <p>(5) Find the area included between the two branches
 of the curve $y=x^2 ± x^{\frac{5}{2}}$ from $x=0$ to $x=1$, also the
 area of the positive portion of the lower branch of
-the curve (see <a href="#figure30">Figure 30</a>.
+the curve (see <a href="11.html#figure30">Figure 30</a>).
 
 <p>(6) Find the volume of a cone of radius of base $r$,
 and of height $h$.
