added link to chapter 9

--- a/20.html
+++ b/20.html
@@ -123,8 +123,12 @@ Example 1 above):
  \text{Write}\;
 u &= \sqrt{1-x^2},\quad dx=dv;  \\
  \text{then }\;
-du &= -\frac{x\, dx}{\sqrt{1-x^2}}\quad \text{(see Chap. IX.,)}
-\end{align*}
+du &= -\frac{x\, dx}{\sqrt{1-x^2}}\quad \text{(see } 
+\style{
+  border-bottom-width: 1px; 
+  border-bottom-style: dotted;
+}{\href{9.html}{\text{Chap. IX}}}) 
+\end{align*} 
 and $x=v$; so that
 \[
 \int \sqrt{1-x^2}\, dx=x \sqrt{1-x^2} + \int \frac{x^2\, dx}{\sqrt{1-x^2}}.
